Creation d'entités sous forme de direction et service hierarchique